--- a/index.css
+++ b/index.css
@@ -28,6 +28,8 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 header {
@@ -123,9 +125,12 @@ footer {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    min-height: 350px;
+    min-height: 80vh;
     color: white;
     padding: 45px 23px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .home-container h1 {
@@ -144,14 +149,17 @@ footer {
     text-decoration: none;
     background-color: #ff8c38;
     border: none;
-    width: 100%;
+    /* width: 100%; */
     margin-top: 27px;
+    padding: 1.2em 3em;
     padding-block: 0.75rem;
     color: white;
     font-weight: 700;
     border-radius: 5px;
     cursor: pointer;
     transition: transform 0.1s ease-in-out;
+    align-self: center;
+    justify-self: center;
 }
 
 .home-container a:hover {
